--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Turn Based Strategy Game</title>
+    <style>
+      html, body { padding: 0; margin: 0; width: 100%; height: 100%; overflow: hidden; }
+    </style>
   </head>
   <body>
-    
+    <script src="/libs/playground.js"></script>
+    <script src="/dist/app.js"></script>
   </body>
 </html>
