Reworked some components. Added input.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <script src="/libs/playground.js"></script>
-    <script src="/dist/app.js"></script>
+    <script src="libs/playground.js"></script>
+    <script src="dist/app.js"></script>
   </body>
 </html>
